--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "esp-lora"
+name = "esp-lora-2"
 version = "0.1.0"
 authors = ["daca <daca@itu.dk>"]
 edition = "2018"
@@ -19,10 +19,8 @@ native = ["esp-idf-sys/native"]
 [dependencies]
 esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
 sx127x_lora = "0.3.1"
-#esp32-hal = "0.3.0"
-#esp32-hal = "0.3.0"
+#radio-sx127x = { version ="0.13.0", default-features = false}
 esp-idf-hal = "0.33.1"
-#esp-hal = {url = "https://github.com/esp-rs/esp-hal"}
 embedded-hal = "=1.0.0-alpha.7"
 
 [build-dependencies]
